feat: implement person endpoints in a reactive way
