# infrastructure/adapters/drive/spring_pgsql_repository_adapter/src/main/java/br/com/lorival/reactivejavatemplate/infrastructure/adapters/drive/spring/pgsql/repositories/tasks/TaskRepositoryImpl.java
@@ -1,7 +1,7 @@
 package br.com.lorival.reactivejavatemplate.infrastructure.adapters.drive.spring.pgsql.repositories.tasks;
 
-import br.com.lorival.reactivejavatemplate.domain.entities.Task;
-import br.com.lorival.reactivejavatemplate.domain.repositories.TaskRepository;
+import br.com.lorival.reactivejavatemplate.domain.entities.Person;
+import br.com.lorival.reactivejavatemplate.domain.repositories.PersonRepository;
 import io.smallrye.mutiny.Uni;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -10,33 +10,33 @@ import org.springframework.stereotype.Repository;
 
 @RequiredArgsConstructor
 @Repository
-public class TaskRepositoryImpl implements TaskRepository {
+public class TaskRepositoryImpl implements PersonRepository {
 
   private final TaskReactiveRepository reactiveRepository;
   private final TaskDomainToTableMapper mapper;
 
   @Override
-  public Uni<Task> insert(Task task) {
+  public Uni<Person> insert(Person task) {
     return Uni.createFrom()
         .completionStage(reactiveRepository.save(mapper.toTable(task)).toFuture())
         .map(mapper::toDomain);
   }
 
   @Override
-  public Uni<Void> update(Task task) {
+  public Uni<Void> update(Person task) {
     return Uni.createFrom()
         .completionStage(reactiveRepository.save(mapper.toTable(task)).then().toFuture());
   }
 
   @Override
-  public Uni<List<Task>> findAll() {
+  public Uni<List<Person>> findAll(int page, int pageSize) {
     return Uni.createFrom()
         .completionStage(reactiveRepository.findAll().collectList().toFuture())
         .map(list -> list.stream().map(mapper::toDomain).collect(Collectors.toList()));
   }
 
   @Override
-  public Uni<Task> findByID(Long ID) {
+  public Uni<Person> findByID(Long ID) {
     return Uni.createFrom()
         .completionStage(reactiveRepository.findById(ID).toFuture())
         .map(mapper::toDomain);
