# infrastructure/adapters/driving/quarkus_restful_api_adapter/src/main/java/br/com/lorival/reactivejavatemplate/infrastructure/adapters/driving/quarkus/restful/resources/persons/PersonResponseMapper.java
@@ -1,0 +1,11 @@
+package br.com.lorival.reactivejavatemplate.infrastructure.adapters.driving.quarkus.restful.resources.persons;
+
+import br.com.lorival.reactivejavatemplate.domain.entities.Person;
+import org.mapstruct.Mapper;
+import org.openapi.quarkus.openapi_yml.model.PersonResponse;
+
+@Mapper(componentModel = "cdi")
+public interface PersonResponseMapper {
+
+  PersonResponse toResponse(Person entity);
+}
