# infrastructure/adapters/driving/spring_restful_api_adapter/src/main/java/br/com/lorival/reactivejavatemplate/infrastructure/adapters/driving/quarkus/restful/resources/task/TaskResponseMapper.java
@@ -1,26 +1,11 @@
 package br.com.lorival.reactivejavatemplate.infrastructure.adapters.driving.quarkus.restful.resources.task;
 
-import br.com.lorival.reactivejavatemplate.domain.entities.Task;
-import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
+import br.com.lorival.reactivejavatemplate.domain.entities.Person;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.Named;
-import org.openapi.spring.openapi_yml.model.TaskResponse;
+import org.openapi.spring.openapi_yml.model.PersonResponse;
 
 @Mapper(componentModel = "spring")
 public interface TaskResponseMapper {
 
-  @Mapping(target = "done", source = "completed")
-  @Mapping(
-      target = "createdAt",
-      source = "createdAt",
-      qualifiedByName = "localDateTimeToOffsetDateTime")
-  TaskResponse toResponse(Task entity);
-
-  @Named("localDateTimeToOffsetDateTime")
-  default OffsetDateTime localDateTimeToOffsetDateTime(LocalDateTime localDateTime) {
-    return localDateTime == null ? null : localDateTime.atOffset(ZoneOffset.UTC);
-  }
+  PersonResponse toResponse(Person entity);
 }
